<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/green"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Изменить Задачу"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="23dp"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
    <androidx.appcompat.widget.AppCompatImageButton
        android:contentDescription="@string/description"
        android:onClick="login"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="15dp"
        android:background="@color/green"
        android:src="@drawable/back_bu"
        />
</LinearLayout>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginLeft="24dp"
        android:textSize="18dp"
        android:textColor="@color/grey"
        android:background="@drawable/text_back"
        android:height="48dp"
        android:text="@string/Zag"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mask"
            android:layout_marginLeft="24dp"
            android:background="@drawable/watches"
            android:layout_marginTop="16dp"
            />
        <EditText
            android:height="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:textColor="@color/grey"
            android:background="@drawable/time"
            android:text="@string/time"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/kalend"
            android:layout_marginLeft="16dp"
            android:background="@drawable/watches"
            android:layout_marginTop="16dp"
            />
        <EditText
            android:height="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:textColor="@color/grey"
            android:background="@drawable/date_back"
            android:text="@string/date"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/big_back"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:text="1"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatImageButton
            android:contentDescription="@string/description"
            android:layout_marginTop="196dp"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete_b"
            android:background="@drawable/delete_button">
        </androidx.appcompat.widget.AppCompatImageButton>
        <androidx.appcompat.widget.AppCompatImageButton
            android:contentDescription="@string/description"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/save"
            android:background="@drawable/save"
            android:onClick="Setting"
            >
        </androidx.appcompat.widget.AppCompatImageButton>

    </LinearLayout>

    </LinearLayout>
